# Python-Weekend-Projects

./: README.md
Big-Data/: BigData_BestPractices_Databricks_JeffTheDeveloper.ipynb  README.md  requirements.txt
Big-Data/Capstone Project/: NextGen-Game-Analytics.ipynb
Big-Data/Capstone Project/data_capstone_datasets_and_scripts/big_data_capstone_datasets_and_scripts/: Neo4j-Graph-Database-Setup.cypher  game_analytics_pipeline.py  setupspark.sh  sparkMLlibClustering.py
Data Analysis Covid-19/: covid19 data analysis notebook.ipynb
Scripts/: covid19 data analysis notebook.ipynb
basic-python-rest-api/: LICENSE  README.md  pyproject.toml  server.py
basic-python-rest-api/api/: Dockerfile  __init__.py  cache.py  config.py  docker-compose.yml  monitoring.py
basic-python-rest-api/api/examples/: README.md  get_example.py
basic-python-rest-api/api/services/: ml_integration.py
basic-python-rest-api/config/: logging.py  settings.py
basic-python-rest-api/dependencies/: database.py
basic-python-rest-api/models/: example.py
basic-python-rest-api/routers/: ai_router.py  example.py  get_example.py  health.py
basic-python-rest-api/schemas/: example.py
basic-python-rest-api/services/: example_service.py
basic-python-rest-api/tests/: tests_examples.py
basic-python-rest-api/utils/: health_check.py  security.py
spotify-data-pipeline/: README.md
tweet_emotion/: LICENSE  Tweet_Emotion_Recognition.ipynb  requirements.txt
