[tool.poetry]
name = "python-rest-api"
version = "1.0.0"
description = "Modern Python REST API"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.18.0"
python-dotenv = "^0.20.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
sqlalchemy = "^1.4.0"
asyncpg = "^0.25.0"
alembic = "^1.8.0"
pydantic = "^1.9.1"
python-json-logger = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
httpx = "^0.23.0"
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.961.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"